# retrieval-augmented-mds

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  run.sh
config/: no_mips.yaml
sotasum/: bart_lightning.py  config.yaml  data_loaders.py  data_modules.py  data_utils.py  decoder.py  decoder_own.py  environment.yml  lightning_model.py  loss.py  main.py  mips.py  model_config.py  pretrain.py  retriever_generator.py  retriever_lightning.py  run.sh  run_train.sh  t5_lightning.py
