[tool.poetry]
name = "retrieval-augmented-mds"
version = "0.1.0"
description = ""
authors = ["Florian Baud <florian.baud@visiativ.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
mlflow = "^2.5.0"
faiss-cpu = "~1.7.3"
tensorboard = "~2.13"
deepspeed = "~0.10.0"
fairscale = "~0.4.13"
pytorch-lightning = { version = "~2.0.5", extras = ["extra"] }
transformers = { version = "~4.35.2", extras = ["accelerate"] }
adapters = "~0.1.0"
sentencepiece = "~0.1.99"
datasets = "~2.15.0"
evaluate = "~0.4.0"
pandas = "^2.0.3"
gdown = "~4.7.1"
httpx = "~0.24.1"
matplotlib = "^3.7.2"
nltk = "~3.8.1"
rouge-score = "~0.1.2"
rich = "~13.4.2"
pymsteams = "~0.2.2"
jupyter = "^1.0.0"
torch = { version = "^2.3.1+cu121", source = "pytorch-gpu-src" }
torchvision = { version = "^0.18.1+cu121", source = "pytorch-gpu-src" }
torchaudio = { version = "^2.3.1+cu121", source = "pytorch-gpu-src" }

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
